# FADE-Emulator

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md
FADE/: CMakeLists.txt  Makefile
FADE/include/: FADE.h
FADE/include/FADE/: Emulator.h  ModelSettings.ModelSettings.autogen  ModelSettings.h
FADE/include/FADE/Distributions/: Distribution.h  Kernels.h  PriorSettings.PriorSettings.autogen  PriorSettings.h
FADE/include/FADE/Infer/: Infer.h  InferPoint.h  InferSettings.h
FADE/include/FADE/Models/: FADE.h  Submodel.h
FADE/include/FADE/Other/: Unpack.h
FADE/include/FADE/Parameters/: HyperParameters.h  HyperSettings.HyperSettings.autogen  HyperSettings.h  ParameterVector.h
FADE/include/FADE/Train/: AnnealingSettings.AnnealingSettings.autogen  AnnealingSettings.h  Train.h  TrainingPoint.h  TrainingSettings.h  (+1 more)
FADE/src/: Emulator.cpp  Infer.cpp  Train.cpp  TrainingPoints.cpp  Unpack.cpp
app/: CMakeLists.txt  Settings.AppSettings.autogen  Settings.BasicSettings.autogen  Settings.h  main.cpp  modes.h
app/modes/: predict.cpp  train.cpp  train.h  unpack.cpp  unpack.h
fade/: CMakeLists.txt  Makefile
notes/: CHANGELOG.md  TODO.md  changelog.tex  fade.tex  guide.tex  macros.tex
notes/presentations/: 26-03-23_Imperial.tex  26-06-30_Masters.tex
notes/presentations/scripts/: partition.py
notes/sections/: data.tex  duals.tex  model.tex  motivation.tex  posterior_predictive.tex  priors.tex  splats.tex
presentations/: 26-03-23_Imperial.tex
presentations/images/: crest3.png~RF266b2c71.TMP
scratch/: prior.ipynb
src/: Distribution.h  FADE.h  HyperParameters.h  Infer.cpp  Infer.h  Kernels.h  Matrix.h  ParameterVector.h  Settings.h  Train.cpp  Train.h  Unpack.cpp  Unpack.h  main.cpp
src/Settings/: BasicSettings.BasicSettings.autogen  BasicSettings.h  HyperSettings.HyperSettings.autogen  HyperSettings.h  InferSettings.InferenceSettings.autogen  InferSettings.h  PriorSettings.PriorSettings.autogen  PriorSettings.h  TrainingSettings.TrainingSettings.autogen  TrainingSettings.h
synthetic/: generator.py
